Fix menu wrap between md lg screen

--- a/src/components/navigation/styles/navbar.module.scss
+++ b/src/components/navigation/styles/navbar.module.scss
@@ -83,7 +83,7 @@
 }
 
 .link {
-  padding: 1rem 3rem;
+  padding: 1rem 2.5rem;
   color: $black;
   text-decoration: none;
   &:hover {
